# Workforce-backup

./: ..gitignore.swp  .flake8  .gitignore  AGENTS.md  HN3T_MASTER_PLAN.md  PHASE1-TENANCY-CHECKLIST.md  PROJECT_DOCS_INDEX.json  PROJECT_STATE_REPORT_2026-04-07.md  PROJECT_STATE_REPORT_2026-04-24.md  RBAC_AUDIT_INDEX.md  RBAC_IMPLEMENTATION_AUDIT.md  RBAC_SUMMARY.txt  README.md  README_APPLY_FIRST.md  SILVER_SANDS_INTEGRATION_PLAN.md  alembic.ini  conftest.py  dev.db.backup  dev.db.before-add-updated-at-20260424T153519Z.bak  dev.db.pre_add_primary_location_bak  dev.db.pre_add_timestamps_bak  dev.db.rebuild.bak  docker-compose.yml  hospitable_ops_dev.db  index.html.merged  index_template.html  pyproject.toml  pyproject.toml.bak  pytest.ini  render.yaml  requirements.txt  response.json  sitecustomize.py  startup.sh  wsgi.py
.copilot_exec/: state.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
alembic/: env.py
app/: __init__.py  main.py
docs/: API_BOUNDARIES.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DOMAIN_MODEL.md  EXAMPLES.md  MASTER_PLAN.md  MIGRATION_PLAN.md  MODULE_CATALOG.md  PHASE_0_APPLY_ORDER.md  PHASE_STATUS.md  PROJECT_OPERATING_SYSTEM.md  PYTHONANYWHERE_DEPLOYMENT.md  RECOVERY_PLAYBOOK.md  ROADMAP.md  TODO.md  WORKLOG.md  docs_index.json
hospitable-ops/: README.md  dev-setup.sh  hospitable_ops_dev.db  pyproject.toml
hospitable-web/: package-lock.json  package.json  wsgi_app.py
pulls/: 30.md
scripts/: acceptance_run.sh  bootstrap_inventory_checklist.md  check_canonical_imports.py  checkpoint.sh  (+4 more)
(+427 files in other folders)
