[tool.poetry]
name = "workforce"
version = "0.1.0"
description = "Workforce multi-tenant suite"
authors = ["hn3tdevops-jpg"]
readme = "README.md"
packages = [
  { include = "app", from = "apps/api" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
pydantic = {extras = ["email"], version = ">=2.0.0"}
pydantic-settings = ">=2.0.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
bcrypt = ">=3.2.0,<4.0.0"
httpx = ">=0.27.0"
aiosqlite = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
anyio = {extras = ["trio"], version = ">=4.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["apps", "packages"]
